# co2_nrf54l15

./: CMakeLists.txt  dts_pcbv1.overlay  git_init_submodules.sh  prj.conf
src/: main.cpp
src/zb/: zb_scd4x_cluster_desc.hpp
z2m/: zb_co2.js
